Make terraform release task generic for paving repos
- Add TODO with deprecation note for when we
remove the terraforming repos and update
their pipelines

[#167935206]

--- a/scripts/terraforming/release/task.yml
+++ b/scripts/terraforming/release/task.yml
@@ -13,8 +13,10 @@ inputs:
 outputs:
 - name: release
 
+# TODO: Remove IAAS param when the terraform projects have been removed
 params:
-  IAAS:
+  IAAS: # Deprecated in favor of RELEASE_NAME
+  RELEASE_NAME:
 
 run:
   path: ci/scripts/terraforming/release/task
