--- a/dockerfiles/releng-tools/Dockerfile
+++ b/dockerfiles/releng-tools/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6.8-jessie
+FROM python:3.7.4-buster
 MAINTAINER https://github.com/cloudfoundry/infrastructure-ci
 
 ENV TERRAFORM_VERSION 0.11.7
